--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/pof.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="og:image" content="/pof.png">
     <title>pof_portal</title>
   </head>
   <body>
